// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DefaultBlockAppender should append a default block when input focused 1`] = `
<div
  className="editor-default-block-appender"
  data-root-uid=""
>
  <Connect(WrappedComponent) />
  <input
    aria-label="Add block"
    className="editor-default-block-appender__content"
    onClick={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
      }
    }
    onFocus={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
      }
    }
    onKeyDown={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
      }
    }
    readOnly={true}
    role="button"
    type="text"
    value="Write your story"
  />
  <WrappedComponent />
  <WithSelect(WithDispatch(WrappedComponent))
    position="top right"
  />
</div>
`;

exports[`DefaultBlockAppender should match snapshot 1`] = `
<div
  className="editor-default-block-appender"
  data-root-uid=""
>
  <Connect(WrappedComponent) />
  <input
    aria-label="Add block"
    className="editor-default-block-appender__content"
    onClick={[MockFunction]}
    onFocus={[MockFunction]}
    onKeyDown={[MockFunction]}
    readOnly={true}
    role="button"
    type="text"
    value="Write your story"
  />
  <WrappedComponent />
  <WithSelect(WithDispatch(WrappedComponent))
    position="top right"
  />
</div>
`;

exports[`DefaultBlockAppender should optionally show without prompt 1`] = `
<div
  className="editor-default-block-appender"
  data-root-uid=""
>
  <Connect(WrappedComponent) />
  <input
    aria-label="Add block"
    className="editor-default-block-appender__content"
    onClick={[MockFunction]}
    onFocus={[MockFunction]}
    onKeyDown={[MockFunction]}
    readOnly={true}
    role="button"
    type="text"
    value=""
  />
  <WrappedComponent />
  <WithSelect(WithDispatch(WrappedComponent))
    position="top right"
  />
</div>
`;
